--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ahmed El Sayegh <ahmedelsayegh7@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.12.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.0.0-rc5"
