--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.5.2",
+    "redux-router": "^2.0.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
